[ch11862] desktop : sidebar fixed and internal scroll / mobile : height of principal content adjusted with height of sidebar and overflow-y hidden -> for better visibilty of sidebar

--- a/src/less/ods-widgets.less
+++ b/src/less/ods-widgets.less
@@ -113,11 +113,14 @@ body {
 }
 @media (min-width: @screen-md-min) {
     .ods-sidebar {
-        // border: 1px solid red;
-        position: absolute;
+        position: fixed;
+        overflow-y: scroll;
         left: 0;
+        top: 100px;
+        height: 85vh;
         width: 300px;
-        padding-top: 25px;
+        padding: 25px 0;
+
     }
 }
 
